--- a/src/styling/pages/AboutPage.scss
+++ b/src/styling/pages/AboutPage.scss
@@ -193,7 +193,7 @@
 
 		@media screen and (max-width: $breakpoint-mobile) {
 			margin-top: 2rem;
-			transform: translateY(2rem);
+			transform: translateY(0rem);
 		}
 
 		&.slide-up {
@@ -203,9 +203,9 @@
 				animation: slide-up-small 1s ease-out forwards;
 			}
 
-			@media screen and (max-width: $breakpoint-mobile) {
-				animation: slide-up-mobile 1s ease-out forwards;
-			}
+			// @media screen and (max-width: $breakpoint-mobile) {
+			// 	animation: slide-up-mobile 1s ease-out forwards;
+			// }
 		}
 	}
 
@@ -227,37 +227,36 @@
 		}
 	}
 
-	@keyframes slide-up-mobile {
-		0% {
-			transform: translateY(2rem);
-		}
-		100% {
-			transform: translateY(0);
-		}
+	// @keyframes slide-up-mobile {
+	// 	0% {
+	// 		transform: translateY(2rem);
+	// 	}
+	// 	100% {
+	// 		transform: translateY(0);
+	// 	}
+}
+
+&__btn-row {
+	width: clamp(48rem, 85vw, 62.5rem);
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+	gap: clamp(1rem, 2vw, 1.5rem);
+	margin-top: 1rem;
+	margin-bottom: clamp(8rem, 15vh, 13rem);
+
+	@media screen and (max-width: $breakpoint-tablet) {
+		width: 18rem;
+		flex-wrap: wrap;
 	}
 
-	&__btn-row {
-		width: clamp(48rem, 85vw, 62.5rem);
-		margin: 0 auto;
-		display: flex;
-		justify-content: center;
-		gap: clamp(1rem, 2vw, 1.5rem);
-		margin-top: 1rem;
-		margin-bottom: clamp(8rem, 15vh, 13rem);
+	@media screen and (max-width: $breakpoint-mobile) {
+		margin-top: 3rem;
+	}
 
+	.btn--connect {
 		@media screen and (max-width: $breakpoint-tablet) {
-			width: 18rem;
-			flex-wrap: wrap;
-		}
-
-		@media screen and (max-width: $breakpoint-mobile) {
-			margin-top: 3rem;
-		}
-
-		.btn--connect {
-			@media screen and (max-width: $breakpoint-tablet) {
-				background-color: $secondary-color;
-			}
+			background-color: $secondary-color;
 		}
 	}
 }
