--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,9 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	-webkit-hyphens: auto;
+	-ms-hyphens: auto;
+	hyphens: auto;
 }
 
 .page-wrapper {
@@ -76,7 +79,12 @@ h1 {
 	line-height: 2.5rem;
 	letter-spacing: clamp(0.1rem, 0.25vw, 0.25rem);
 	transform: scaleY(1.03);
-	padding-bottom: 1.2rem;
+	padding-bottom: 1.5rem;
+
+	@media screen and (max-width: $breakpoint-small-desktop) {
+		line-height: 2.2rem;
+		padding-bottom: 1rem;
+	}
 
 	@media screen and (max-width: $breakpoint-tablet) {
 		line-height: 1.8rem;
